--- a/index.html
+++ b/index.html
@@ -71,6 +71,40 @@
 				<p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">강의 들으러 가기</a></p>
 			</div>
 		</div>
+		<footer style="background-color: #000000; color: #ffffff">
+			<div class="container">
+				<br>
+				<div class="row">
+					<div class="col-sm-2" style="text-align: center;">
+						<h5>Copyright &copy; 2021</h5><h5>김민수(Minsu Kim)</h5>
+					</div>
+					<div class="col-sm-4">
+						<h4>대표자 소개</h4><p>저는 코딩 부스터의 대표 김민수입니다. 현재 웹 개발 및 기획을 하고 있습니다.</p>
+					</div>
+					<div class="col-sm-2">
+						<h4 style="text-align: center;">내비게이션</h4>
+						<div class="list-group">
+							<a href="#" class="list-group-item">소개</a>
+							<a href="#" class="list-group-item">강사진</a>
+							<a href="#" class="list-group-item">강의</a>
+						</div>
+					</div>
+					<div class="col-sm-2">
+						<h4 style="text-align: center;">SNS</h4>
+						<div class="list-group">
+							<a href="#" class="list-group-item">페이스북</a>
+							<a href="#" class="list-group-item">유튜브</a>
+							<a href="#" class="list-group-item">네이버 TV</a>
+						</div>
+					</div>
+					<div class="col-sm-2">
+						<h4 style="text-align: center;">
+							<span class="glyphicon glyphicon-ok"></span>&nbsp;by 김민수
+						</h4>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="js/bootstrap.js"></script>
 	</body>
